--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@langchain/core": "^0.3.42",
-    "@langchain/groq": "^0.1.0",
+    "@langchain/core": "^1.1.2",
+    "@langchain/groq": "^1.0.2",
     "@langchain/langgraph": "^0.2.57",
+    "@langchain/openai": "^1.1.3",
     "@supabase/supabase-js": "^2.39.0",
+    "colord": "^2.9.3",
     "dotenv": "^16.4.5",
     "groq-sdk": "^0.11.0",
     "lucide-react": "^0.555.0",
