--- a/.env.example
+++ b/.env.example
@@ -17,10 +17,16 @@ GROQ_API_KEY=your_groq_api_key_here
 # Get your free key: https://openrouter.ai/keys
 OPENROUTER_API_KEY=your_openrouter_api_key_here
 
-# Supabase Configuration
-# Get from: https://app.supabase.com/project/_/settings/api
-VITE_SUPABASE_URL=your_supabase_project_url
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+# Appwrite Configuration
+VITE_APPWRITE_ENDPOINT=https://cloud.appwrite.io/v1
+VITE_APPWRITE_PROJECT_ID=your_project_id_here
+VITE_APPWRITE_DATABASE_ID=main
+VITE_APPWRITE_CAROUSELS_COLLECTION_ID=carousels
+VITE_APPWRITE_ANALYTICS_COLLECTION_ID=user_analytics
+
+# Supabase Configuration (DEPRECATED - migrated to Appwrite)
+# VITE_SUPABASE_URL=your_supabase_project_url
+# VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 
 # ============================================================================
 # Notes
