--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.71.1",
+    "@google/generative-ai": "^0.24.1",
     "@langchain/core": "^1.1.2",
     "@langchain/groq": "^1.0.2",
     "@langchain/langgraph": "^0.2.57",
     "@langchain/openai": "^1.1.3",
     "@supabase/supabase-js": "^2.39.0",
+    "appwrite": "^21.5.0",
     "colord": "^2.9.3",
     "dotenv": "^16.4.5",
     "groq-sdk": "^0.11.0",
