--- a/.env.example
+++ b/.env.example
@@ -7,13 +7,21 @@
 # Location: .env.example
 # ============================================================================
 
-# AI Model Selection - Choose between Groq and OpenRouter in the app UI
+# AI Model Selection - Choose between Groq, Claude, and Gemini in the app UI
 
 # Groq API Key (Llama 3.3 70B - Free Tier, Generous Limits)
 # Get your free key: https://console.groq.com/keys
 GROQ_API_KEY=your_groq_api_key_here
 
-# OpenRouter API Key (Gemini 2.0 Flash - Free Tier)
+# Claude API Key (Claude Haiku 3.5)
+# Get your free key: https://console.anthropic.com/
+CLAUDE_API_KEY=your_claude_api_key_here
+
+# Gemini API Key (Gemini Flash - Free Tier)
+# Get your free key: https://aistudio.google.com/apikey
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# OpenRouter API Key (Alternative - Deprecated)
 # Get your free key: https://openrouter.ai/keys
 OPENROUTER_API_KEY=your_openrouter_api_key_here
 
@@ -38,11 +46,21 @@ VITE_APPWRITE_ANALYTICS_COLLECTION_ID=user_analytics
 # - Generous rate limits (great for free tier)
 # - Good JSON adherence
 #
-# OpenRouter (Better for complex reasoning):
+# Claude Haiku 3.5 (Best for quality):
+# - Model: claude-3-5-haiku-20241022
+# - Excellent reasoning and JSON adherence
+# - Very fast and affordable
+# - Great for complex carousel content
+#
+# Gemini Flash (Google's Free Model):
+# - Model: gemini-1.5-flash
+# - Free tier with generous limits
+# - Excellent JSON adherence
+# - Fast generation with good reasoning
+# - Native JSON mode support
+#
+# OpenRouter (Alternative - Deprecated):
 # - Model: google/gemini-2.0-flash-exp:free
-# - Better JSON adherence than Llama
-# - Smarter reasoning
-# - Stricter rate limits
-# - Requires HTTP-Referer and X-Title headers (configured in vite.config.ts)
+# - Requires HTTP-Referer and X-Title headers
 #
 # ============================================================================
