--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@google/generative-ai": "^0.24.1",
     "@langchain/core": "^1.1.2",
     "@langchain/groq": "^1.0.2",
-    "@langchain/langgraph": "^0.2.57",
+    "@langchain/langgraph": "^1.0.0",
     "@langchain/openai": "^1.1.3",
     "@supabase/supabase-js": "^2.39.0",
     "appwrite": "^21.5.0",
@@ -30,6 +30,8 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
