--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "server": "tsx watch server.ts",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -15,17 +16,24 @@
     "@langchain/groq": "^1.0.2",
     "@langchain/langgraph": "^1.0.0",
     "@langchain/openai": "^1.1.3",
-    "@supabase/supabase-js": "^2.39.0",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
     "appwrite": "^21.5.0",
     "colord": "^2.9.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^5.2.1",
     "groq-sdk": "^0.11.0",
     "lucide-react": "^0.555.0",
+    "lucide-static": "^0.561.0",
+    "mammoth": "^1.11.0",
+    "pdfjs-dist": "^5.4.449",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^6.30.2",
     "satori": "0.10.13",
     "yoga-wasm-web": "0.3.3",
+    "youtube-transcript": "^1.2.1",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
@@ -34,6 +42,7 @@
     "@types/react-dom": "^19.2.3",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.0.0",
+    "tsx": "^4.21.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
