added pdf export

--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "appwrite": "^21.5.0",
     "colord": "^2.9.3",
     "cors": "^2.8.5",
+    "dom-to-image-more": "^3.7.2",
     "dotenv": "^16.4.5",
     "express": "^5.2.1",
     "groq-sdk": "^0.11.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.555.0",
     "lucide-static": "^0.561.0",
     "mammoth": "^1.11.0",
