--- a/.env.example
+++ b/.env.example
@@ -21,8 +21,9 @@ CLAUDE_API_KEY=your_claude_api_key_here
 # Get your free key: https://aistudio.google.com/apikey
 GEMINI_API_KEY=your_gemini_api_key_here
 
-# OpenRouter API Key (Alternative - Deprecated)
-# Get your free key: https://openrouter.ai/keys
+# OpenRouter API Key (For Free Tier System)
+# Get your key: https://openrouter.ai/keys
+# Used for free tier new users (first 3 generations)
 OPENROUTER_API_KEY=your_openrouter_api_key_here
 
 # Appwrite Configuration
@@ -31,6 +32,10 @@ VITE_APPWRITE_PROJECT_ID=your_project_id_here
 VITE_APPWRITE_DATABASE_ID=main
 VITE_APPWRITE_CAROUSELS_COLLECTION_ID=carousels
 VITE_APPWRITE_ANALYTICS_COLLECTION_ID=user_analytics
+VITE_APPWRITE_PROFILES_COLLECTION_ID=profiles
+# Server-side API Key (Scopes: databases.read, databases.write)
+# Create in Appwrite Console: Settings > API Keys > Create API Key
+VITE_APPWRITE_API_KEY=your_server_api_key_here
 
 # Supabase Configuration (DEPRECATED - migrated to Appwrite)
 # VITE_SUPABASE_URL=your_supabase_project_url
