--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^6.30.2",
+    "replicate": "^1.4.0",
     "satori": "0.10.13",
     "yoga-wasm-web": "0.3.3",
     "youtube-transcript": "^1.2.1",
